--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 					<div class="page-content">
 						<div class="page-header">
 							<h1>
-								Dashboard
+								Welcome!
 								<small>
 									<i class="icon-double-angle-right"></i>
-									overview &amp; stats
+									
 								</small>
 							</h1>
 						</div><!-- /.page-header -->
