--- a/accounts.html
+++ b/accounts.html
@@ -128,7 +128,13 @@ alert("DEBUGGING: we are in the onBodyLoad() function");
   // note the UserId column is an auto incrementing column which is
 //useful if you want to pull back distinct rows
   // easily from the table.
-   tx.executeSql( 'CREATE TABLE IF NOT EXISTS User(UserId INTEGER NOT NULL PRIMARY KEY, MeterNum INTEGER NOT NULL, FirstName TEXT NOT NULL, LastName TEXT NOT NULL, Reading INTEGER NOT NULL, ReadDate DATE NOT NULL)',[],nullHandler,errorHandler);},errorHandler,successCallBack); 
+   tx.executeSql( 'CREATE TABLE IF NOT EXISTS User(UserId INTEGER NOT NULL PRIMARY KEY, MeterNum INTEGER NOT NULL, FirstName TEXT NOT NULL, LastName TEXT NOT NULL, Reading INTEGER NOT NULL, ReadDate DATE NOT NULL)',[],nullHandler,errorHandler);
+   tx.executeSql( 'INSERT INTO User(FirstName, LastName, MeterNum, Reading, ReadDate)VALUES(Kendrick,Lamar,1000,0,2014-03-25)',[],nullHandler,errorHandler);
+   tx.executeSql( 'INSERT INTO User(FirstName, LastName, MeterNum, Reading, ReadDate)VALUES(Mikee,Villegas,1010,0,2014-03-25)',[],nullHandler,errorHandler);
+   tx.executeSql( 'INSERT INTO User(FirstName, LastName, MeterNum, Reading, ReadDate)VALUES(Justin,Samson,1020,0,2014-03-25)',[],nullHandler,errorHandler);
+   tx.executeSql( 'INSERT INTO User(FirstName, LastName, MeterNum, Reading, ReadDate)VALUES(Micah,Ramos,1604,0,2014-03-25)',[],nullHandler,errorHandler);
+   tx.executeSql( 'INSERT INTO User(FirstName, LastName, MeterNum, Reading, ReadDate)VALUES(Jho,Javeloza,1111,0,2014-03-25)',[],nullHandler,errorHandler);},errorHandler,successCallBack);
+   
 }
  
 // list the values in the database to the screen using jquery to
