--- a/accounts.html
+++ b/accounts.html
@@ -506,7 +506,7 @@ $(document).ready( function() {
 												
 												<li>
 													<a data-toggle="tab" href="#maintain">
-														<i class="icon-wrench"></i>Maintainance
+														<i class="icon-wrench"></i>DB
 													</a>
 												</li>
 
